--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>My First Page</title>
+        <title>Homepage</title>
     </head>
     <body>
         <nav></nav>
